[package]
name = "tmm"
version = "0.1.0"
edition = "2018"
authors = ["DomesticMoth"]
repository = "https://github.com/DomesticMoth/tmm"
readme = "README.md"
description = "Telegram Multichat Manager"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
dotenv = "0.15"
teloxide = { version = "0.9", features = ["macros", "auto-send"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
pickledb = { version = "0.5", features = ["cbor"], default-features = false }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = 'abort'
strip = true
